[project]
name = "pdf-qa-chatbot"
version = "0.1.0"
description = "RAG-based PDF Q&A chatbot using Ollama and LangChain"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2",
    "langchain-ollama>=1.0",
    "langchain-chroma>=1.1",
    "langchain-text-splitters>=1.1",
    "pymupdf>=1.27",
    "chromadb>=1.5",
    "ragas>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
]
