[project]
name = "pdf-qa-chatbot"
version = "0.1.0"
description = "RAG-based PDF Q&A chatbot - for egg.AI"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain>=1.2",
    "langchain-ollama>=1.0",
    "langchain-chroma>=1.1",
    "langchain-text-splitters>=1.1",
    "pymupdf>=1.27",
    "chromadb>=1.5",
    "langchain-qdrant>=1.1",
    "langchain-openai>=1.1",
    "ragas>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
